# python-project-template

./: .pre-commit-config.yaml  .pre-commit-config.yml  pyproject.toml  ruff.toml
